# ProtMiner

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
examples/: PF00201.hmm  UGT-Glycosyl-transferase_43.fasta
src/ProtMiner/: __init__.py  cli.py  install.py  parsers.py  scoring.py  utils.py
src/protscout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
